WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299967
REGRESSION(
300594@main
): [ macOS Debug ] TestWebKitAPI.ProcessSwap.MemoryPressureDuringProcessSwap is a constant crash
https://bugs.webkit.org/show_bug.cgi?id=299967
Summary
REGRESSION(300594@main): [ macOS Debug ] TestWebKitAPI.ProcessSwap.MemoryPres...
Dawn Morningstar
Reported
2025-10-01 10:48:34 PDT
TestWebKitAPI.ProcessSwap.MemoryPressureDuringProcessSwap Is a constantly crashing api-test after
300594@main
https://commits.webkit.org/300594@main
This is reproducible with run-api-tests --root <Path to spade> TestWebKitAPI.ProcessSwap.MemoryPressureDuringProcessSwap I locally bisected this to
300594@main
, it passes at
300593@main
HISTORY:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.ProcessSwap.MemoryPressureDuringProcessSwap
TEST-RUN:
https://build.webkit.org/#/builders/1226/builds/2384
STDIO:
https://s3-us-west-2.amazonaws.com/archives.webkit.org/mac-sequoia-x86_64%20arm64-debug-run-api-tests/300596@main-2384.txt
CRASH: TestWebKitAPI.ProcessSwap.MemoryPressureDuringProcessSwap 16:38:53.883 16386 2025-09-26 16:03:26.885 TestWebKitAPI[24742:4715767] NSEventConcurrentProcessingEnabled=NO 16:38:53.883 16386 ASSERTION FAILED: m_table 16:38:53.883 16386 /Volumes/Data/worker/Apple-Sequoia-Debug-Build/build/WebKitBuild/Debug/usr/local/include/wtf/HashTable.h(237) : void WTF::HashTableConstIterator<WTF::HashTable<WTF::Ref<WTF::DefaultWeakPtrImpl>, WTF::Ref<WTF::DefaultWeakPtrImpl>, WTF::IdentityExtractor, WTF::DefaultHash<WTF::Ref<WTF::DefaultWeakPtrImpl>>, WTF::HashTraits<WTF::Ref<WTF::DefaultWeakPtrImpl>>, WTF::HashTraits<WTF::Ref<WTF::DefaultWeakPtrImpl>>>, WTF::Ref<WTF::DefaultWeakPtrImpl>, WTF::Ref<WTF::DefaultWeakPtrImpl>, WTF::IdentityExtractor, WTF::DefaultHash<WTF::Ref<WTF::DefaultWeakPtrImpl>>, WTF::HashTraits<WTF::Ref<WTF::DefaultWeakPtrImpl>>, WTF::HashTraits<WTF::Ref<WTF::DefaultWeakPtrImpl>>>::checkValidity(const const_iterator &) const [HashTable = WTF::HashTable<WTF::Ref<WTF::DefaultWeakPtrImpl>, WTF::Ref<WTF::DefaultWeakPtrImpl>, WTF::IdentityExtractor, WTF::DefaultHash<WTF::Ref<WTF::DefaultWeakPtrImpl>>, WTF::HashTraits<WTF::Ref<WTF::DefaultWeakPtrImpl>>, WTF::HashTraits<WTF::Ref<WTF::DefaultWeakPtrImpl>>>, Key = WTF::Ref<WTF::DefaultWeakPtrImpl>, Value = WTF::Ref<WTF::DefaultWeakPtrImpl>, Extractor = WTF::IdentityExtractor, HashFunctions = WTF::DefaultHash<WTF::Ref<WTF::DefaultWeakPtrImpl>>, Traits = WTF::HashTraits<WTF::Ref<WTF::DefaultWeakPtrImpl>>, KeyTraits = WTF::HashTraits<WTF::Ref<WTF::DefaultWeakPtrImpl>>] 16:38:53.883 16386 1 0x14b3e8b7c WTF::HashTableConstIterator<WTF::HashTable<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>, WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>, WTF::IdentityExtractor, WTF::DefaultHash<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>, WTF::HashTraits<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>, WTF::HashTraits<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>, WTF::FastMalloc>, WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>, WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>, WTF::IdentityExtractor, WTF::DefaultHash<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>, WTF::HashTraits<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>, WTF::HashTraits<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>>::checkValidity(WTF::HashTableConstIterator<WTF::HashTable<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>, WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>, WTF::IdentityExtractor, WTF::DefaultHash<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>, WTF::HashTraits<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>, WTF::HashTraits<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>, WTF::FastMalloc>, WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>, WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>, WTF::IdentityExtractor, WTF::DefaultHash<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>, WTF::HashTraits<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>, WTF::HashTraits<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>> const&) const 16:38:53.883 16386 2 0x14b3e8b00 WTF::HashTableConstIterator<WTF::HashTable<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>, WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>, WTF::IdentityExtractor, WTF::DefaultHash<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>, WTF::HashTraits<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>, WTF::HashTraits<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>, WTF::FastMalloc>, WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>, WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>, WTF::IdentityExtractor, WTF::DefaultHash<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>, WTF::HashTraits<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>, WTF::HashTraits<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>>::operator==(WTF::HashTableConstIterator<WTF::HashTable<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>, WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>, WTF::IdentityExtractor, WTF::DefaultHash<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>, WTF::HashTraits<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>, WTF::HashTraits<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>, WTF::FastMalloc>, WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>, WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>, WTF::IdentityExtractor, WTF::DefaultHash<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>, WTF::HashTraits<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>, WTF::HashTraits<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>> const&) const 16:38:53.883 16386 3 0x14b3e7f2c bool WTF::operator==<WTF::HashTable<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>, WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>, WTF::IdentityExtractor, WTF::DefaultHash<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>, WTF::HashTraits<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>, WTF::HashTraits<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>, WTF::FastMalloc>, WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>(WTF::HashTableConstIteratorAdapter<WTF::HashTable<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>, WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>, WTF::IdentityExtractor, WTF::DefaultHash<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>, WTF::HashTraits<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>, WTF::HashTraits<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>, WTF::FastMalloc>, WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>> const&, WTF::HashTableConstIteratorAdapter<WTF::HashTable<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>, WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>, WTF::IdentityExtractor, WTF::DefaultHash<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>, WTF::HashTraits<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>, WTF::HashTraits<WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>>, WTF::FastMalloc>, WTF::Ref<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl>>> const&) 16:38:53.883 16386 4 0x14d483318 WTF::WeakHashSet<WebKit::WebProcessProxy, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>::WeakHashSetConstIterator::operator++() 16:38:53.883 16386 5 0x14d71efe0 WebKit::WebProcessPool::handleMemoryPressureWarning(WTF::Critical) 16:38:53.883 16386 6 0x14d7ed42c WebKit::installMemoryPressureHandler()::$_0::operator()(WTF::Critical, WTF::Synchronous) const 16:38:53.883 16386 7 0x14d7ed368 WTF::Detail::CallableWrapper<WebKit::installMemoryPressureHandler()::$_0, void, WTF::Critical, WTF::Synchronous>::call(WTF::Critical, WTF::Synchronous) 16:38:53.883 16386 8 0x116452870 WTF::Function<void (WTF::Critical, WTF::Synchronous)>::operator()(WTF::Critical, WTF::Synchronous) const 16:38:53.883 16386 9 0x116451df0 WTF::MemoryPressureHandler::releaseMemory(WTF::Critical, WTF::Synchronous) 16:38:53.883 16386 10 0x116459600 WTF::MemoryPressureHandler::respondToMemoryPressure(WTF::Critical, WTF::Synchronous) 16:38:53.883 16386 11 0x116452704 WTF::MemoryPressureHandler::beginSimulatedMemoryPressure() 16:38:53.883 16386 12 0x116459878 invocation function for block in WTF::MemoryPressureHandler::install() 16:38:53.883 16386 13 0x1850d1b54 notify_monitor_file 16:38:53.883 16386 14 0x180fba338 _dispatch_block_async_invoke2 16:38:53.883 16386 15 0x180fc485c _dispatch_client_callout 16:38:53.883 16386 16 0x180fe1b58 _dispatch_main_queue_drain.cold.5 16:38:53.883 16386 17 0x180fb9db0 _dispatch_main_queue_drain 16:38:53.883 16386 18 0x180fb9cec _dispatch_main_queue_callback_4CF 16:38:53.883 16386 19 0x18128bda4 __CFRUNLOOP_IS_SERVICING_THE_MAIN_DISPATCH_QUEUE__ 16:38:53.883 16386 20 0x18124ca9c __CFRunLoopRun 16:38:53.883 16386 21 0x18124bc58 CFRunLoopRunSpecific 16:38:53.883 16386 22 0x18281ac78 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 16:38:53.883 16386 23 0x103710724 TestWebKitAPI::Util::spinRunLoop(unsigned long long) 16:38:53.883 16386 24 0x102e06810 ProcessSwap_MemoryPressureDuringProcessSwap_Test::TestBody() 16:38:53.883 16386 25 0x103807b74 void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 16:38:53.883 16386 26 0x1037c0924 void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 16:38:53.883 16386 27 0x1037c0874 testing::Test::Run() 16:38:53.883 16386 28 0x1037c17a4 testing::TestInfo::Run() 16:38:53.883 16386 29 0x1037c2938 testing::TestSuite::Run() 16:38:53.883 16386 30 0x1037d0744 testing::internal::UnitTestImpl::RunAllTests() 16:38:53.884 16386 31 0x10380c8a8 bool testing::internal::HandleSehExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*)
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-10-01 10:49:38 PDT
<
rdar://problem/161749579
>
Ben Nham
Comment 2
2025-10-01 18:00:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51660
EWS
Comment 3
2025-10-02 09:58:18 PDT
Committed
300884@main
(3a5023d40097): <
https://commits.webkit.org/300884@main
> Reviewed commits have been landed. Closing PR #51660 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug