Fix debug assert in TestWebKitAPI.ProcessSwap.MemoryPressureDuringProcessSwap https://bugs.webkit.org/show_bug.cgi?id=299967 rdar://161749579

Reviewed by Per Arne Vollan and Youenn Fablet.

This test started crashing after 300594@main because calling shutDown modifies the hash map during
iteration. Fix with a copyToVector.

* Source/WebKit/UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::handleMemoryPressureWarning):

Canonical link: https://commits.webkit.org/300884@main